<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1" android:id="@+id/text_symbol"
        android:gravity="center"
        android:text="@string/symbol" />

    <TextView android:id="@+id/text_bid_ask"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/bid_ask" />

    <TextView
        android:layout_width="0dp" android:id="@+id/text_spread"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/spread" />

    <ImageView
        android:id="@+id/button_remove" android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:clickable="true"
        android:src="@drawable/remove" />

</LinearLayout>