<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:contentInsetLeft="0dp"
            android:contentInsetStart="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <TextView
                    android:id="@+id/text_title"
                    style="@style/ToolbarText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="left"
                    android:singleLine="true"
                    android:text="@string/quotations"

                    />
            </LinearLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_instruments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instruments"
                android:textSize="12sp" />

            <Button
                android:id="@+id/button_help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/help"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/text_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="Status: Connected" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray_dark"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingLeft="16dp"
            android:paddingRight="49dp"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/text_symbol"
                style="@style/QuotationHeaderText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"

                android:gravity="center"
                android:text="@string/symbol"
                />

            <TextView
                android:id="@+id/text_bid_ask"
                style="@style/QuotationHeaderText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"

                android:layout_weight="2"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:gravity="center"
                android:text="@string/bid_ask"
                />

            <TextView
                android:id="@+id/text_spread"
                style="@style/QuotationHeaderText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"

                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:gravity="center"
                android:text="@string/spread"
              />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>